--- a/index.html
+++ b/index.html
@@ -373,23 +373,9 @@
 					<div class=" swiper-wrapper">
                         <!--PortfolioItem Template Starts-->
 						<div class="portfolio-item swiper-slide " data-groups="all slideshow">
-							<a href="https://github.com/eallyy/nftoaster" class="portfolio-item--content">
+							<a href="https://github.com/eallyy/vivino_red_vine" target="_blank" class="portfolio-item--content">
 								<div class="portfolio-item--img b-box">
-									<img src="assets/images/p1-1.jpg" class="img-fluid mx-auto" alt="work-img">
-								</div>
-								<div class="portfolio-item--desc d-flex justify-content-center align-items-center">
-									<div class="portfolio-item--desc-in">
-										<h3 class="mb-2 text-white">NFToaster</h3>
-										<p class="text-white">Lightweight NFT generator script.</p>
-									</div>
-								</div>
-							</a>
-						</div>
-                        <!--PortfolioItem Template Ends-->
-						<div class="portfolio-item swiper-slide " data-groups="all slideshow">
-							<a href="hhttps://github.com/eallyy/vivino_red_vine" class="portfolio-item--content">
-								<div class="portfolio-item--img b-box">
-									<img src="assets/images/p1-1.jpg" class="img-fluid mx-auto" alt="work-img">
+									<img src="assets/images/vivino.jpg" class="img-fluid mx-auto" alt="work-img">
 								</div>
 								<div class="portfolio-item--desc d-flex justify-content-center align-items-center">
 									<div class="portfolio-item--desc-in">
@@ -399,10 +385,11 @@
 								</div>
 							</a>
 						</div>
+                        <!--PortfolioItem Template Ends-->
 						<div class="portfolio-item swiper-slide " data-groups="all slideshow">
-							<a href="https://github.com/eallyy/newspoon" class="portfolio-item--content">
+							<a href="https://github.com/eallyy/newspoon" target="_blank" class="portfolio-item--content">
 								<div class="portfolio-item--img b-box">
-									<img src="assets/images/p1-1.jpg" class="img-fluid mx-auto" alt="work-img">
+									<img src="assets/images/newspoon.jpg" class="img-fluid mx-auto" alt="work-img">
 								</div>
 								<div class="portfolio-item--desc d-flex justify-content-center align-items-center">
 									<div class="portfolio-item--desc-in">
@@ -413,9 +400,22 @@
 							</a>
 						</div>
 						<div class="portfolio-item swiper-slide " data-groups="all slideshow">
-							<a href="https://github.com/eallyy/LastPenny" class="portfolio-item--content">
+							<a href="https://github.com/eallyy/nftoaster" target="_blank" class="portfolio-item--content">
 								<div class="portfolio-item--img b-box">
-									<img src="assets/images/p1-1.jpg" class="img-fluid mx-auto" alt="work-img">
+									<img src="assets/images/nftoaster.jpg" class="img-fluid mx-auto" alt="work-img">
+								</div>
+								<div class="portfolio-item--desc d-flex justify-content-center align-items-center">
+									<div class="portfolio-item--desc-in">
+										<h3 class="mb-2 text-white">NFToaster</h3>
+										<p class="text-white">Lightweight NFT generator script.</p>
+									</div>
+								</div>
+							</a>
+						</div>
+						<div class="portfolio-item swiper-slide " data-groups="all slideshow">
+							<a href="https://github.com/eallyy/LastPenny" target="_blank" class="portfolio-item--content">
+								<div class="portfolio-item--img b-box">
+									<img src="assets/images/last_penny.jpg" class="img-fluid mx-auto" alt="work-img">
 								</div>
 								<div class="portfolio-item--desc d-flex justify-content-center align-items-center">
 									<div class="portfolio-item--desc-in">
@@ -426,9 +426,9 @@
 							</a>
 						</div>
 						<div class="portfolio-item swiper-slide " data-groups="all slideshow">
-							<a href="https://github.com/eallyy/maltern" class="portfolio-item--content">
+							<a href="https://github.com/eallyy/maltern" target="_blank" class="portfolio-item--content">
 								<div class="portfolio-item--img b-box">
-									<img src="assets/images/p1-1.jpg" class="img-fluid mx-auto" alt="work-img">
+									<img src="assets/images/maltern.jpg" class="img-fluid mx-auto" alt="work-img">
 								</div>
 								<div class="portfolio-item--desc d-flex justify-content-center align-items-center">
 									<div class="portfolio-item--desc-in">
@@ -439,9 +439,9 @@
 							</a>
 						</div>
 						<div class="portfolio-item swiper-slide " data-groups="all slideshow">
-							<a href="https://github.com/eallyy/btc_hash_miner" class="portfolio-item--content">
+							<a href="https://github.com/eallyy/btc_hash_miner" target="_blank" class="portfolio-item--content">
 								<div class="portfolio-item--img b-box">
-									<img src="assets/images/p1-1.jpg" class="img-fluid mx-auto" alt="work-img">
+									<img src="assets/images/btc_hash_miner.jpg" class="img-fluid mx-auto" alt="work-img">
 								</div>
 								<div class="portfolio-item--desc d-flex justify-content-center align-items-center">
 									<div class="portfolio-item--desc-in">
