Current working position edited.

--- a/index.html
+++ b/index.html
@@ -300,8 +300,8 @@
 												ELEFense	
 											</div>
 											<div class="col-md-5 pb-2 pb-md-0">
-												<h5 class="mb-3">Chief Technology Officer</h5>
-												<p>CTO and Co-Founder in ELEFense.</p>
+												<h5 class="mb-3">Head Of Technology</h5>
+												<p>Head Of Technology and Co-Founder in ELEFense.</p>
 											</div>
 											<div class="col-md-4 text-md-right"><h6 class="badge badge-light">2022 Aug - Present</h6></div>
 											
