index.html update

--- a/index.html
+++ b/index.html
@@ -111,9 +111,7 @@
 						<div class="about-desc wow fadeInUp" data-wow-duration="1s"  data-wow-delay="500ms">
 							<div class="about-desc-content">
 								<h1 class="font-weight-light mb-5">I'm Emir Alanyalioglu</h1>
-								<p class="font-weight-light my-3">I am aware that achieving success is a long and difficult way. Therefore, I try to turn every crisis in front of me into an opportunity. I see every failure as an experience, and I develop myself against them in my next projects.
-                                    I grew up with a computer since I was very young. In addition, I had an interest in technology. I also dealt with physical electronic circuits as I am a person of skill. When all this came together, what I do with passion has become my lifestyle, not my profession.
-                                    Unlike many people in the world, I am one of those who do their job passionately. </p>
+								<p class="font-weight-light my-3">I am aware that achieving success is a long and difficult journey. Therefore, I try to turn every crisis into an opportunity. I see every failure as an experience, and I guard myself against them in future projects. I grew up with a computer since very young and love technology. I’ve also dealt with physical electronic circuits and see myself as a jack of many skills. My passion has become my lifestyle, not my profession and therefore I can do my job passionately.</p>
 							</div>
 
 							<div class="about-desc-more text-left mt-5">
@@ -276,7 +274,7 @@
 
 						<div class="section-head">
 							<span>MY RESUME</span>
-							<h2>MY EXPERTISES</h2>
+							<h2>MY EXPERTISE</h2>
 						</div>
 
 						<ul class="nav nav-tabs">
