--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 					</div>   
 
  	   			</div>
-				<p>This is the official website of "EALANY LTD" company.</p>
+				<p class="text-center">This is the official website of "EALANY LTD" company.</p>
     		</div>
     	</div>
     	<!-- END: Home -->
